--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,143 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical"
-              android:gravity="center"
-              tools:context=".DetailActivity">
+<ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingVertical="24dp"
+            android:orientation="vertical"
+            android:gravity="center"
+            tools:context=".DetailActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-        <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/detail_img_user"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/user1"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"/>
-        <androidx.cardview.widget.CardView
+        <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
-                app:cardCornerRadius="4dp"
-                app:layout_constraintStart_toStartOf="@id/detail_img_user"
-                app:layout_constraintEnd_toEndOf="@id/detail_img_user"
-                app:layout_constraintTop_toBottomOf="@id/detail_img_user"
-                android:translationY="-18dp"
                 android:layout_height="wrap_content">
-            <LinearLayout
+            <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/detail_img_user"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/user1"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"/>
+            <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingVertical="3dp"
-                    android:paddingHorizontal="8dp">
-                <ImageView android:layout_width="10dp"
-                           android:layout_height="match_parent"
-                           android:layout_gravity="center"
-                           android:layout_marginEnd="6dp"
-                           android:src="@drawable/git_icon"/>
-                <TextView
-                        android:id="@+id/detail_tv_repository"
+                    app:cardCornerRadius="4dp"
+                    app:layout_constraintStart_toStartOf="@id/detail_img_user"
+                    app:layout_constraintEnd_toEndOf="@id/detail_img_user"
+                    app:layout_constraintTop_toBottomOf="@id/detail_img_user"
+                    android:translationY="-18dp"
+                    android:layout_height="wrap_content">
+                <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:includeFontPadding="false"
-                        android:textStyle="bold"
-                        android:text="@string/repository"
-                        android:textSize="12sp"/>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    <TextView
-            android:id="@+id/detail_tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="@color/design_default_color_primary"
-            android:text="Salomo Hutapea"/>
-    <TextView
-            android:id="@+id/detail_tv_username"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textColor="@color/design_default_color_secondary"
-            android:text="\@salomohutapea"/>
-    <TextView
-            android:id="@+id/detail_tv_company"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="2dp"
-            android:textSize="12sp"
-            android:text="Google"/>
-    <LinearLayout
-            android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
-            android:gravity="center"
-            android:layout_height="wrap_content">
+                        android:paddingVertical="3dp"
+                        android:paddingHorizontal="8dp"
+                        tools:ignore="UseCompoundDrawables">
+                    <ImageView android:layout_width="10dp"
+                               android:layout_height="match_parent"
+                               android:layout_gravity="center"
+                               android:layout_marginEnd="6dp"
+                               android:src="@drawable/git_icon"
+                               android:contentDescription="@string/repository_count_icon"/>
+                    <TextView
+                            android:id="@+id/detail_tv_repository"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:includeFontPadding="false"
+                            android:textStyle="bold"
+                            android:text="@string/repository"
+                            android:textSize="12sp"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+                android:id="@+id/detail_tv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textColor="@color/design_default_color_primary"
+                android:text="@string/salomo_hutapea"/>
+        <TextView
+                android:id="@+id/detail_tv_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textColor="@color/design_default_color_secondary"
+                android:text="@string/salomohutapea"/>
+        <TextView
+                android:id="@+id/detail_tv_company"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:textSize="12sp"
+                android:text="@string/google"/>
+        <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:gravity="center"
+                android:layout_height="wrap_content">
 
+            <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#55CCCCCC"
+                    android:layout_marginEnd="5dp">
+                <ImageView
+                        android:padding="2dp"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
+                        android:src="@drawable/ic_follow_icon"
+                        android:contentDescription="@string/user_follow_icon"/>
+            </androidx.cardview.widget.CardView>
+            <TextView
+                    android:id="@+id/detail_tv_followers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textStyle="bold"
+                    android:text="@string/_100"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="2dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:text="@string/followers"
+                    android:textSize="12sp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textStyle="bold"
+                    android:text="@string/dot"
+                    android:layout_marginHorizontal="1dp"
+                    android:textSize="12sp"/>
+            <TextView
+                    android:id="@+id/detail_tv_following"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:textStyle="bold"
+                    android:text="@string/_200"
+                    android:textSize="12sp"
+                    android:layout_marginEnd="2dp"/>
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:includeFontPadding="false"
+                    android:text="@string/following"
+                    android:textSize="12sp"/>
+        </LinearLayout>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:textSize="12sp"
+                android:text="@string/location"/>
         <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#55CCCCCC"
-                android:layout_marginEnd="5dp">
-            <ImageView
-                    android:padding="2dp"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/ic_follow_icon"/>
+                android:layout_marginTop="5dp">
+            <fragment
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"/>
         </androidx.cardview.widget.CardView>
-        <TextView
-                android:id="@+id/detail_tv_followers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="100"
-                android:textSize="12sp"
-                android:layout_marginEnd="2dp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="followers"
-                android:textSize="12sp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="·"
-                android:layout_marginHorizontal="1dp"
-                android:textSize="12sp"/>
-        <TextView
-                android:id="@+id/detail_tv_following"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="200"
-                android:textSize="12sp"
-                android:layout_marginEnd="2dp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="following"
-                android:textSize="12sp"/>
     </LinearLayout>
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:textSize="12sp"
-            android:text="Location"/>
-    <androidx.cardview.widget.CardView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp">
-        <fragment
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:id="@+id/map"
-                android:name="com.google.android.gms.maps.SupportMapFragment"/>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+</ScrollView>
