--- a/app/src/main/res/layout/item_row_users.xml
+++ b/app/src/main/res/layout/item_row_users.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="16dp">
 
@@ -51,12 +52,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingVertical="3dp"
-                    android:paddingHorizontal="8dp">
+                    android:paddingHorizontal="8dp"
+                    tools:ignore="UseCompoundDrawables">
                 <ImageView android:layout_width="10dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="6dp"
-                           android:src="@drawable/git_icon"/>
+                           android:src="@drawable/git_icon"
+                           android:contentDescription="@string/repository_count_icon"/>
                 <TextView
                         android:id="@+id/single_repo_user"
                         android:layout_width="wrap_content"
