--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center"
-        tools:context=".DetailActivity">
+        tools:context=".views.DetailActivity">
     <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
             android:layout_width="wrap_content"
