--- a/app/src/main/res/layout/fragment_follow.xml
+++ b/app/src/main/res/layout/fragment_follow.xml
@@ -3,7 +3,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context=".FollowFragment">
+             tools:context=".views.FollowFragment">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_follow"
