Submission 2 : loading done

--- a/app/src/main/res/layout/item_row_users.xml
+++ b/app/src/main/res/layout/item_row_users.xml
@@ -56,65 +56,80 @@
                     android:textSize="12sp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:gravity="center"
+    <androidx.cardview.widget.CardView
+            android:id="@+id/card_icon_follow"
+            app:layout_constraintLeft_toRightOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
             android:layout_marginStart="10dp"
-            android:id="@+id/linear_layout_follow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#55CCCCCC"
+            android:layout_marginEnd="5dp">
+        <ImageView
+                android:padding="2dp"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:src="@drawable/ic_follow_icon"
+                android:contentDescription="@string/user_follow_icon"/>
+    </androidx.cardview.widget.CardView>
+    <TextView
+            app:layout_constraintLeft_toRightOf="@id/card_icon_follow"
             app:layout_constraintTop_toTopOf="@id/single_card_repo"
             app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
-            app:layout_constraintLeft_toRightOf="@id/single_card_repo"
-            android:layout_height="wrap_content">
-
-        <androidx.cardview.widget.CardView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="#55CCCCCC"
-                android:layout_marginEnd="5dp">
-            <ImageView
-                    android:padding="2dp"
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:src="@drawable/ic_follow_icon"
-                    android:contentDescription="@string/user_follow_icon"/>
-        </androidx.cardview.widget.CardView>
-        <TextView
-                android:id="@+id/single_tv_followers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="@string/_100"
-                android:textSize="12sp"
-                android:layout_marginEnd="2dp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@string/followers"
-                android:textSize="12sp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="@string/dot"
-                android:layout_marginHorizontal="1dp"
-                android:textSize="12sp"/>
-        <TextView
-                android:id="@+id/single_tv_following"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:textStyle="bold"
-                android:text="@string/_200"
-                android:textSize="12sp"
-                android:layout_marginEnd="2dp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:text="@string/following"
-                android:textSize="12sp"/>
-    </LinearLayout>
+            android:id="@+id/single_tv_followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
+            android:text="@string/_100"
+            android:textSize="12sp"
+            android:layout_marginEnd="2dp"/>
+    <TextView
+            android:id="@+id/label_followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:text="@string/followers"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            app:layout_constraintLeft_toRightOf="@id/single_tv_followers"
+            android:layout_marginStart="2dp"
+            android:textSize="12sp"/>
+    <TextView
+            android:id="@+id/dot"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            app:layout_constraintLeft_toRightOf="@id/label_followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
+            android:text="@string/dot"
+            android:layout_marginStart="2dp"
+            android:textSize="12sp"/>
+    <TextView
+            android:layout_marginStart="2dp"
+            app:layout_constraintLeft_toRightOf="@id/dot"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            android:id="@+id/single_tv_following"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:textStyle="bold"
+            android:text="@string/_200"
+            android:textSize="12sp"
+            android:layout_marginEnd="2dp"/>
+    <TextView
+            app:layout_constraintLeft_toRightOf="@id/single_tv_following"
+            app:layout_constraintTop_toTopOf="@id/single_card_repo"
+            app:layout_constraintBottom_toBottomOf="@id/single_card_repo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:layout_marginStart="2dp"
+            android:text="@string/following"
+            android:textSize="12sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
