--- a/app/src/main/res/values-in/string.xml
+++ b/app/src/main/res/values-in/string.xml
@@ -41,4 +41,5 @@
     <string name="nine">09.00</string>
     <string name="repeating_alarm">Alarm berulang</string>
     <string name="settings">Pengaturan</string>
+    <string name="error_add_fav">Gagal menambah pengguna ke favorit</string>
 </resources>
